--- a/tryconnect/tryconnect/tryconnect.csproj
+++ b/tryconnect/tryconnect/tryconnect.csproj
@@ -14,6 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\..\..\..\Final projects\Comprog x DBMS\cheattxt\2022CODEandMySQLdataDLL\MySql.Data.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
